tests/snapshots/syntax__01-minimal-debug.snap
---
source: tests/syntax.rs
expression: scenario
---
Scenario {
    types: [],
    cast: [],
    events: [],
    no_extra: NoExtra,
}
