tests/snapshots/syntax__02-with-types-yaml.snap
---
source: tests/syntax.rs
expression: scenario
---
types:
  - use: One
    as: T1
  - use: Two
    as: T2
events: []
