tests/snapshots/syntax__03-with-actors-debug.snap
---
source: tests/syntax.rs
expression: scenario
---
Scenario {
    types: [],
    cast: [
        ActorName(
            "Alicia",
        ),
        ActorName(
            "Roberto",
        ),
    ],
    events: [],
    no_extra: NoExtra,
}
