tests/snapshots/syntax__03-with-actors-yaml.snap
---
source: tests/syntax.rs
expression: scenario
---
actors:
  - Alicia
dummies:
  - Roberto
events: []
