tests/snapshots/syntax__04-with-single-bind-yaml.snap
---
source: tests/syntax.rs
expression: scenario
---
events:
  - id: the-bind
    bind:
      dst:
        a: $A
        b: $B
        c: $_
      src:
        literal:
          a: A
          b: B
          c: C
