tests/snapshots/syntax__05-with-single-send-yaml.snap
---
source: tests/syntax.rs
expression: scenario
---
types:
  - use: A
    as: A
cast:
  - Jorge
events:
  - id: the-send
    send:
      from: Jorge
      type: A
      data:
        literal: ~
