tests/snapshots/syntax__07-with-single-respond-yaml.snap
---
source: tests/syntax.rs
expression: scenario
---
types:
  - use: A
    as: A
dummies:
  - Pablo
events:
  - id: the-respond
    respond:
      from: Pablo
      to_request: something-that-did-not-happen
      data:
        literal: ~
